sway-ir/tests/verify/entry_block_mem2reg.ir
// This test proves that https://github.com/FuelLabs/sway/issues/6148 is fixed.

// error: Entry block of the function "main" has a predecessor. The predecessor is "block1".

script {
  fn main(x: bool) -> u64 {
    local u64 S = const u64 3

    entry(x: bool):
    v0 = get_local __ptr u64, S
    v1 = load v0
    cbr x, block0(x, v1), block2(x, v1)

    block0(x: bool, y: u64):
    v0 = get_local __ptr u64, S
    v1 = const u64 1
    store v1 to v0
    br block1(x)

    block1(x: bool):
    z = const bool false
    br entry(z)

    block2(x: bool, y: u64):
    ret u64 y
  }
}
